--- a/src/adapters/github.less
+++ b/src/adapters/github.less
@@ -102,6 +102,21 @@
         }
       }
     }
+
+    .octotree_issues_view {
+      .octotree_header_repo {
+        font-size: 13px;
+        font-weight: normal;
+      }
+      .octotree_header_repo:before {
+        position: relative;
+        top: 2px;
+        content: data-uri('image/svg+xml;charset=UTF-8', './octicons/repo.svg');
+      }
+      .octotree_header_branch {
+        font-size: 11px;
+      }
+    }
   }
 
   a.octotree_toggle, a.octotree_opts {
