--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -379,8 +379,8 @@ a.octotree_toggle {
       }
     }
 
-    .issue_button_like .reacted {
-
+    .issue_button_like, .reacted {
+      background: red;
     }
 
     .issue_button_volunteer {
@@ -392,8 +392,8 @@ a.octotree_toggle {
       }
     }
 
-    .issue_button_volunteer .reacted {
-
+    .issue_button_volunteer, .reacted {
+      background: red;
     }
   }
 }
