--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -374,26 +374,26 @@ a.octotree_toggle {
     .issue_button_like {
       display: inline-block;
 
+      &_reacted {
+        background: red;
+      }
+
       .issue_button_like_count {
 
       }
-    }
-
-    .issue_button_like, .reacted {
-      background: red;
     }
 
     .issue_button_volunteer {
       margin-left: 5px;
       display: inline-block;
 
+      &_reacted {
+        background: red;
+      }
+
       .issue_button_volunteer_count {
 
       }
-    }
-
-    .issue_button_volunteer, .reacted {
-      background: red;
     }
   }
 }
