--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -290,15 +290,21 @@ a.octotree_toggle {
 }
 
 .octoprime_links {
-  padding-top: 5px;
-  padding-bottom: 5px;
-
-  .octoprime_links_browse {
-
+  padding: 5px 10px;
+  &_link{
+    padding: 3px 10px;
+    font-size: 13px;
+    display: inline-block;
+  }
+  &_browse {
   }
 
-  .octoprime_links_contribute {
+  &_contribute {
+  }
 
+  &_act{
+    background-color: #dddddd;
+    border-radius: 30px;
   }
 }
 
