--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -404,10 +404,10 @@ a.octotree_toggle {
         }
 
         &_reacted {
-          color: #20BF48;
+          color: #0DBD3A;
           .issue_button_like_count {
             &_icon {
-              background-color: #20BF48;
+              background-color: #0DBD3A;
             }
           }
         }
@@ -439,10 +439,10 @@ a.octotree_toggle {
         }
 
         &_reacted {
-          color: #20BF48;
+          color: #0DBD3A;
           .issue_button_volunteer_count {
             &_icon {
-              background-color: #20BF48;
+              background-color: #0DBD3A;
             }
           }
         }
