--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -362,10 +362,15 @@ a.octotree_toggle {
         display: flex;
         flex-flow: row;
       }
+
       &:hover{
         background-color: #f5f5f5;
       }
     }
+  }
+
+  .issue_help_wanted {
+    background-color: #e6f1f5;
   }
 
   .issue_title {
