--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -10,7 +10,7 @@
   left: 0;
   bottom: 0;
   border-right: 1px solid #ddd;
-  z-index: 1000001;
+  z-index: 1000002;
   transition: transform .2s ease;
   transform: translate3d(-100%, 0, 0);
 
@@ -290,13 +290,20 @@ a.octotree_toggle {
 }
 
 .octoprime_links {
-  padding: 5px 10px;
+  //padding: 10px;
   border-bottom: 1px solid rgb(225, 228, 232);
   border-right: 1px solid rgb(225, 228, 232);
   &_link{
-    padding: 3px 10px;
+    padding: 5px 0px;
     font-size: 13px;
     display: inline-block;
+    position: relative;
+    //border-radius: 30px;
+    //background-color: #eeeeee;
+    width: 50%;
+    border: 0;
+    text-align: center;
+    margin: 0px -1px;
     &:hover{
       text-decoration: none;
     }
@@ -308,12 +315,22 @@ a.octotree_toggle {
     &_counter {
       display: inline-block;
       text-align: center;
+      position: absolute;
+      top: -7px;
+      right: -7px;
+      background: #FF3801;
+      border-radius: 20px;
+      padding: 3px;
+      font-size: 9px;
+      color: #ffffff;
+      line-height: 10px;
+      min-width: 16px;
+      z-index: 10000020;
     }
   }
 
   &_act{
     background-color: #dddddd;
-    border-radius: 30px;
   }
 }
 
