--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -35,6 +35,9 @@
       display: block;
     }
 
+    &_body{
+      margin-bottom: 70px;
+    }
     .octotree_view_header {
       width: 100%;
       position: absolute;
@@ -396,7 +399,7 @@ a.octotree_toggle {
   }
 
   .issue_buttons {
-    flex: 1 85px;
+    flex: 1 120px;
     text-align: right;
     color:#666666;
 
@@ -486,11 +489,42 @@ a.octotree_toggle {
     flex-flow: row;
     margin-top: 10px;
 
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    padding: 5px;
+    background: #ffffff;
+    border-top: #dddddd 1px solid;
+    border-right: #dddddd 1px solid;
+
+    -webkit-box-shadow: 0px -2px 10px -4px rgba(0,0,0,0.50);
+    -moz-box-shadow: 0px -2px 10px -4px rgba(0,0,0,0.50);
+    box-shadow: 0px -2px 10px -4px rgba(0,0,0,0.50);
+
     &_text {
       flex: 1 100%;
+      margin-right: 10px;
+      border: 1px solid #d1d5da;
+      border-radius: 3px;
+      outline: none;
+      box-shadow: inset 0 1px 2px rgba(27,31,35,0.075);
+      padding: 5px;
     }
     &_submit {
-      flex: 1 100px;
+      flex: 1 120px;
+      text-decoration: none;
+      border-radius: 3px;
+      font-weight: 400;
+
+      background-color: #0DBD3A;
+      color: #ffffff;
+      border: 1px solid #0B9C30;
+
+      &:disabled{
+        background-color: #f6f8fa;
+        color: #586069;
+        border: 1px solid #e1e4e8;
+      }
     }
   }
 }
